[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bing_brush"
version = "0.0.1"
authors = [
  { name="Yunfeng Wang", email="wyf.brz@gmail.com" },
]
description = "image generator using the Bing Image Create API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"requests",
#"httpx",
#"regex",
#"loguru",
#"tqdm",
]

[project.scripts]
bing_brush="bing_brush.cli:cli"

[project.urls]
"Homepage" = "https://github.com/vra/bing_brush"
"Bug Tracker" = "https://github.com/vra/bing_brush/issues"
