[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bing_brush"
version = "0.1.2"
authors = [
  { name="Yunfeng Wang", email="wyf.brz@gmail.com" },
]
description = "One-line Image Generating Program Based on the Bing Image Createor (Powered by DALL·E 3)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
"click",
"requests",
"regex",
]

[project.scripts]
bing_brush="bing_brush.cli:cli"

[project.urls]
"Homepage" = "https://github.com/vra/bing_brush"
"Bug Tracker" = "https://github.com/vra/bing_brush/issues"
